Sat Oct 22 03:41:13 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* valarith.c (value_binop):  Take care of ANSI `value preserving'
	rule, which was not addressed by the previous change.

	* rs6000-tdep.c (skip_prologue):  Handle `mr r31,r1', which is
	generated by gcc-2.6, as a synonym for `oril r31,r1,0'.

	* TODO:  Remove item about RS/6000 shared libraries.

Thu Oct 20 17:35:45 1994  Stu Grossman  (grossman@cygnus.com)

	* defs.h, infrun.c (wait_for_inferior), top.c:  Call
	target_wait_hook to allow GUI to handle blocking for inferior.  Call
	call_command_hook in execute_command to provide means for wrapping
	commands with GUI state change updates.
	* gdbtk.c (gdb_cmd):  Force GUI into idle mode when errors occur.
	* (gdb_stop):  New tcl command to stop the target process.
	* (x_event, gdbtk_wait):  Allow GUI to interrupt gdb out of target
	waits.
	* (gdbtk_call_command):  Wrapper around command processing to
	alert GUI of target state changes.
	* (gdbtk_init):  Get the fd of X server for doing async
	notification of X events (via x_event).  Setup new hooks.
	* gdbtk.tcl:  Add scrollbars to assembly and command windows.
	* Change window foreground & background colors.
	* Create margin tag for breakpoints in source and assembly windows.
	* Add new routines to be invoked when target state changes to/from
	idle.
	* Add start of expression window.
	* Change bindings of mouse button 1 in assembly and source window
	to just set or clear breakpoints when in the margin tag.
	* Change shape of register window to be more vertical to better
	reflect it's contents.
	* Add stop button.
	* Cleanup some code around command window bindings.

	* infrun.c (wait_for_inferior):  Make sure
	through_sigtramp_breakpoint is non-null before deleting.

Thu Oct 20 10:26:43 1994  J.T. Conklin  (jtc@phishhead.cygnus.com)

	* config/powerpc/ppc-nw.mt (TDEPFILES): Removed exec.o.

Thu Oct 20 06:56:07 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)
